changed about picture, size, and border-radius

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@ permalink: /about/
 <div class="about">
 
 <div class="img-about">
-  <img src="/assets/images/southpme.png"/>
+  <img src="/assets/images/me1.png"/>
 </div>
 <section class="about-info">
 <p>   Hi there! Welcome to my website! My name is Nick, dungeon master, game master, and future internet lord (aka Front End Engineer).
