--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@ permalink: /about/
   <ul>
     <li><img src="/assets/images/icons/Icon-10.png"/></li>
     <li><img src="/assets/images/icons/Icon-11.png"/></li>
+    <li><img src="/assets/images/icons/Icon-12.png"/></li>
   </ul>
   <!-- <div> -->
   <dl>
