moved and adjusted wedding port

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: home
       <label> One Love to Rule Them All</label>
       <div>
       <img src="/assets/images/sites/wedding/weddingsite.png"/>
-    <p>This is a work in Progress<a href="/wip#wedding">Read More</a></p>
+    <p>Static site created for Nick & Candace's Wedding<a href="/portfolio#wedding">Read More</a></p>
   </div></li>
     <li class="sites-img">
       <label>Portfolio Site</label>
