--- a/assets/pages/portfolio.html
+++ b/assets/pages/portfolio.html
@@ -37,7 +37,7 @@ permalink: /portfolio/
   <th> View:</th>
 </tr>
   <tr>
-    <td><a href="https://github.com/pope410211/LordsoftheRoundTable"><button class="port-btn">Code on GitHub</button></a></td>
+    <td><a href="https://github.com/pope410211/LordsoftheRoundTable" target="_blank"><button class="port-btn">Code on GitHub</button></a></td>
   </tr>
 </table>
 <dl>
@@ -74,15 +74,15 @@ permalink: /portfolio/
       <div id="port-info">
       <dl>
       <dt>One Love to Rule Them All - <i>WIP</i></dt>
-      <dd>Wedding Website developed for Candace and Nick's wedding. </dd>
+      <dd>Wedding Website developed for Candace and Nick's wedding. It is not mobile friendly at the moment. </dd>
     </dl>
   <table>
   <tr>
   <th> View:</th>
 </tr>
   <tr>
-    <td><a href="#"><button class="port-btn" >Code on GitHub</button></a></td>
-    <td><a href="http://www.onelovetorulethemall.com"><button class="port-btn">Live</button></a></td>
+    <td><a href="https://github.com/pope410211/onelovetorulethemall" target="_blank"><button class="port-btn">Code on GitHub</button></a></td>
+    <td><a href="http://www.onelovetorulethemall.com" target="_blank"><button class="port-btn">Live</button></a></td>
   </tr>
 </table>
 <dl>
@@ -127,7 +127,7 @@ permalink: /portfolio/
   <th> View:</th>
 </tr>
   <tr>
-    <td><a href="https://github.com/pope410211/pope410211.github.io"><button class="port-btn" >Code on GitHub</button></a></td>
+    <td><a href="https://github.com/pope410211/pope410211.github.io" target="_blank"><button class="port-btn" >Code on GitHub</button></a></td>
   </tr>
 </table>
 <dl>
@@ -173,7 +173,7 @@ permalink: /portfolio/
   <th> View:</th>
 </tr>
   <tr>
-    <td><a href="https://github.com/pope410211/tiy-assignments"><button class="port-btn">Code on GitHub</button></a></td>
+    <td><a href="https://github.com/pope410211/tiy-assignments" target="_blank"><button class="port-btn">Code on GitHub</button></a></td>
   </tr>
 </table>
 <dl>
