--- a/assets/pages/blog.html
+++ b/assets/pages/blog.html
@@ -8,9 +8,12 @@ permalink: /blog/
 <ul>
   {% for post in site.posts %}
     <li>
-      <a href="{{ post.url }}">{{ post.title }}</a>
-      <p class="excerpt">{{ post.excerpt }}</p>
+      <a class="title" href="{{ post.url }}">{{ post.title }}
+      <p class="excerpt">{{ post.content | strip_html | truncatewords:25 }}</p>
+      </a>
     </li>
   {% endfor %}
 </ul>
+
+
 </section>
