--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -39,7 +39,7 @@ permalink: /about/
 <h1>Be Involved</h1>
   <p>I have been working in Hospitality for the past 13 years, in every position imaginable, but most of my time in management and training postions. I was also the resident geek for most of these companies, as they would
   come to me to install computer systems and networs, troubleshoot problems and explain why the printer was not working - stupid printer. I spent my freetime studying technology - I have alway been fascinated with how it work - I have built computers, repaired old game consoles, and self taught to program (I use the term program loosely in this situation - more like learned to write terrible HTML.).
-When the opportunity to actually learn and study professional programming came about at The Iron Yard (with their learn to learn methody), it was a simple decsion with my Fianac&eacute;e that I would go.</p>
+When the opportunity to actually learn and study professional programming came about at The Iron Yard (with their learn to learn method), it was a simple decsion with my Fianac&eacute;e that I would go.</p>
 
 <p> Software is about being involved, with the community, and the world. I look forward to a career of building websites that will aid in setting the standard for the web. And additionaly contributing to, and creating open source software that will help the community at large make the world of the internet a better place.</p>
 
