--- a/assets/pages/portfolio.html
+++ b/assets/pages/portfolio.html
@@ -73,8 +73,8 @@ permalink: /portfolio/
     <li class="port-li">
       <div id="port-info">
       <dl>
-      <dt>One Love to Rule Them All - <i>WIP</i></dt>
-      <dd>Wedding Website developed for Candace and Nick's wedding. It is not mobile friendly at the moment. </dd>
+      <dt>One Love to Rule Them All</dt>
+      <dd>Wedding Website developed for Candace and Nick's wedding. It is not mobile friendly at the moment. Site is live, will add images shortly.</dd>
     </dl>
   <table>
   <tr>
